--- a/contract-generator/src/app/user-contract/user-contract.component.html
+++ b/contract-generator/src/app/user-contract/user-contract.component.html
@@ -324,7 +324,7 @@
   <div class="row">
   <div class="col s4"></div>
   <div class="col s4">
-      <a class="waves-effect waves-light btn-large">Submit Contract</a>
+      <a class="waves-effect waves-light btn-large" (click)="submit()">Submit Contract</a>
     </div>
   </div>
 </div>
